--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,7 @@ environment:
     WINDBG_DIR: '%ProgramFiles(x86)%\Windows Kits\8.1\Debuggers\x86'
 
 install:
+- powershell -executionPolicy bypass -noexit -file cmake-3.6.2.ps1
 - if not exist "%MINGW_ARCHIVE%" appveyor DownloadFile "%MINGW_URL%" -FileName "%MINGW_ARCHIVE%"
 - 7z x -y "%MINGW_ARCHIVE%" > nul
 - python -m ensurepip
